--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
   <header>
+    <div class="logo-text-header">EnderVerse</div>
     <button id="menu-toggle">☰</button>
   </header>
 
