--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
     </section>
 
     <section class="discord-info">
+      <h2 class="discord-heading">Por Supuesto</h2>
       <div class="discord-text">
-        <h2>Por Supuesto</h2>
         <p>Y por supuesto si quieres pedir algún manga que subamos puedes hacerlo desde nuestro apartado de <strong>«Pedidos»</strong>.</p>
         <p>Y si quieres ser parte del <strong>«Staff»</strong> del servidor de Discord o colaborar con <strong>«EnderVerse»</strong>, también puedes hacerlo desde el <strong>«Discord»</strong>!!!!!</p>
       </div>
