--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
     <section class="discord-info">
       <h2 class="discord-heading">Por Supuesto</h2>
-      <div class="discord-content">
+      <div class="discord-content compact">
         <div class="discord-text">
           <p>Y Por supuesto si quieres Pedir algún manga que subamos puedes hacerlo desde nuestro apartado de <strong>«Pedidos»</strong>.</p>
           <p>Y de querer ser parte del <strong>«Staff»</strong> del server de Discord o un colaborador para <strong>«EnderVerse»</strong> pueden hacerlo también desde el <strong>«Discord»</strong>!!!!</p>
