--- a/index.html
+++ b/index.html
@@ -39,9 +39,10 @@
       <a href="https://discord.com/" class="discord-btn">¡Unirme Ya!</a>
     </section>
 
-    <section class="discord-info">
+    <!-- SECCIÓN AJUSTADA -->
+    <section class="discord-info right-align">
       <h2 class="discord-heading">Por Supuesto</h2>
-      <div class="discord-content compact">
+      <div class="discord-content">
         <div class="discord-text">
           <p>Y Por supuesto si quieres Pedir algún manga que subamos puedes hacerlo desde nuestro apartado de <strong>«Pedidos»</strong>.</p>
           <p>Y de querer ser parte del <strong>«Staff»</strong> del server de Discord o un colaborador para <strong>«EnderVerse»</strong> pueden hacerlo también desde el <strong>«Discord»</strong>!!!!</p>
