--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
       <a href="https://discord.com/" class="discord-btn">¡Unirme Ya!</a>
     </section>
 
-    <section class="discord-info flipped-layout">
+    <section class="discord-info balanced-layout">
       <h2 class="discord-heading center">Por Supuesto</h2>
-      <div class="discord-content flipped">
-        <div class="discord-text center">
+      <div class="discord-content balanced">
+        <div class="discord-text centered-block">
           <p>Y Por supuesto si quieres Pedir algún manga que subamos puedes hacerlo desde nuestro apartado de <strong>«Pedidos»</strong>.</p>
           <p>Y de querer ser parte del <strong>«Staff»</strong> del server de Discord o un colaborador para <strong>«EnderVerse»</strong> pueden hacerlo también desde el <strong>«Discord»</strong>!!!!</p>
         </div>
