--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 
   <nav id="menu">
     <ul>
-      <li><a href="catalogo.html">Inicio</a></li>
+      <li><a href="catalogo.html">Mangas</a></li>
       <li><a href="buscador.html">Buscar</a></li>
-      <li><a href="favoritos.html">Favoritos</a></li>
-      <li><a href="subir.html">Subir Manga</a></li>
+      <li><a href="noticias.html">Noticias</a></li>
+      <li><a href="subir.html">¿Comó Subir Mangas?</a></li>
     </ul>
   </nav>
 
