--- a/mangas/mieruko-chan/Tomo1.html
+++ b/mangas/mieruko-chan/Tomo1.html
@@ -4,8 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mieruko-chan - Mini AnimeFLV</title>
-  <link rel="stylesheet" href="../style.css" />
+  <link rel="stylesheet" href="../../style.css" />
   <style>
+    body {
+      background-color: #0b0b0b;
+      color: #fff;
+    }
+
     .container {
       padding: 30px;
     }
@@ -31,7 +36,7 @@
 
     #anime-title {
       font-size: 3.2em;
-      color: #fff;
+      color: #d8175f;
       margin-bottom: 5px;
     }
 
@@ -169,8 +174,8 @@
 </head>
 <body>
   <header>
-    <h1>Mini AnimeFLV</h1>
-    <a href="../catalogo.html"><button>⬅ Volver al catálogo</button></a>
+    <h1 style="color: #d8175f;">Mini AnimeFLV</h1>
+    <a href="../../catalogo.html"><button>⬅ Volver al catálogo</button></a>
   </header>
 
   <div class="container">
@@ -211,6 +216,7 @@
       </div>
       <p>Cargando temporada…</p>
     </div>
+  </div>
 
     <script>
   const temporadas = {
