--- a/mangas/mieruko-chan/Tomo-1.html
+++ b/mangas/mieruko-chan/Tomo-1.html
@@ -185,7 +185,8 @@
         <div class="season-selector">
           <label for="season-select"><strong>Seleccionar Temporada:</strong></label><br><br>
           <select id="season-select" onchange="cambiarTemporada()">
-            <option value="s1">S1: Mieruko-chan season 1</option>
+            <option value="s1">S1: Mieruko-chan Tomo 1</option>
+            <option value="s2">S2: Mieruko-chan Tomo 2</option>
           </select>
         </div>
       </div>
@@ -193,17 +194,17 @@
         <h2 id="anime-title">Mieruko-chan</h2>
         <p id="anime-sinopsis">Miko es una típica estudiante de preparatoria cuya vida da un vuelco cuando de repente comienza a ver monstruos espantosos y horribles. A pesar de estar completamente aterrorizada, Miko sigue con su vida diaria, fingiendo no darse cuenta de los horrores que la rodean. Debe soportar el miedo para mantenerse a ella y a su amiga Hana fuera de peligro, incluso si eso significa enfrentarse cara a cara con lo peor. Mezclando comedia y horror, Mieruko-chan cuenta la historia de una chica que trata de lidiar con lo paranormal actuando indiferente hacia él.</p>
         <ul>
-          <li><strong>Cantidad de Capítulos:</strong> <span>12</span></li>
-          <li><strong>Temporadas:</strong> <span>2</span></li>
+          <li><strong>Cantidad de Tomos:</strong> <span>13</span></li>
+          <li><strong>Tomo:</strong> <span>1</span></li>
           <li><strong>Idioma:</strong> <span>Español Latino</span></li>
-          <li><strong>Subtítulos:</strong> <span>NO</span></li>
-          <li><strong>Fecha de Estreno:</strong> <span>3 de octubre de 2021</span></li>
-          <li><strong>Mayoria de Edad:</strong> <span>13+</span></li>
-          <li><strong>Estado:</strong> <span>Finalizado</span></li>
+          <li><strong>autor:</strong> <span>Tomoki Izumi</span></li>
+          <li><strong>Fecha de Estreno:</strong> <span>2 de noviembre de 2018</span></li>
+          <li><strong>Mayoria de Edad:</strong> <span>16+</span></li>
+          <li><strong>Estado:</strong> <span>En Emision</span></li>
         </ul>
         <div class="action-buttons">
-          <a href="https://mega.io/es/" target="_blank" class="descargar">Descargar Temporada 1</a>
-          <a href="https://www.youtube.com/watch?v=VI3U_IXsxL0" target="_blank" class="trailer">Ver Trailer</a>
+          <a href="https://mega.io/es/" target="_blank" class="descargar">Descargar Tomo 1</a>
+          <a href="https://www.youtube.com/watch?v=ZnAjSrPnGZQ" target="_blank" class="trailer">PV animado del manga</a>
         </div>
       </div>
     </div>
