--- a/mangas/mieruko-chan/Tomo-1.html
+++ b/mangas/mieruko-chan/Tomo-1.html
@@ -432,7 +432,7 @@
 
     setTimeout(() => {
       if (selected === 's2') {
-        window.location.href = 'Nagoya.html';
+        window.location.href = 'Tomo-2.html';
       } else {
         loader.style.display = 'none';
         cargarTemporada();
