--- a/capitulos/mieruko-chan/capitulo-1.html
+++ b/capitulos/mieruko-chan/capitulo-1.html
@@ -97,9 +97,9 @@
     const capitulo = {
       titulo: "Capítulo 1: ¿Los puedes ver?",
       paginas: [
-        { num: 1, page: "https://tu-url.com/pagina1.jpg" },
-        { num: 2, page: "https://tu-url.com/pagina2.jpg" },
-        { num: 3, page: "https://tu-url.com/pagina3.jpg" }
+        { num: 1, page: "https://en3.movietop.cc/comics/pic1/34/24482/547344/55167e3d41e253a86c71866a62f39c72.webp?acc=f8-dm-eQh8nMKDyWMeUTOA&exp=1762195592" },
+        { num: 2, page: "https://en13.movietop.cc/comics/pic1/34/24482/547344/e26c7884676c750dbdf4b20c04755a58.webp?acc=i1GJnxecK7rouH2AGoxAzA&exp=1762195630" },
+        { num: 3, page: "https://en8.movietop.cc/comics/pic1/34/24482/547344/dc9c5e72115e56504b3ece307a461181.webp?acc=l8BMj7QT74nvlx_0tUdBqw&exp=1762195630" }
         // Agregá más páginas según necesites
       ]
     };
