--- a/capitulos/mieruko-chan/capitulo-1.html
+++ b/capitulos/mieruko-chan/capitulo-1.html
@@ -93,9 +93,10 @@
     const capitulo = {
       titulo: "Capítulo 1: ¿Los puedes ver?",
       paginas: [
-        { num: 1, page: "https://en3.movietop.cc/comics/pic1/34/24482/547344/55167e3d41e253a86c71866a62f39c72.webp?acc=f8-dm-eQh8nMKDyWMeUTOA&exp=1762195592" },
-        { num: 2, page: "https://en13.movietop.cc/comics/pic1/34/24482/547344/e26c7884676c750dbdf4b20c04755a58.webp?acc=i1GJnxecK7rouH2AGoxAzA&exp=1762195630" },
-        { num: 3, page: "https://en8.movietop.cc/comics/pic1/34/24482/547344/dc9c5e72115e56504b3ece307a461181.webp?acc=l8BMj7QT74nvlx_0tUdBqw&exp=1762195630" }
+        { num: 1, page: "https://es13.movietop.cc/es_manga/pic5/22/28502/756135/4c2e5eaae9152079b9e95845750bb9ab.webp?acc=VPu72OyTsqUTwAXlXDk1Dg&exp=1762197330" },
+        { num: 2, page: "https://es6.movietop.cc/es_manga/pic5/22/28502/756135/913f7da49fa19c66a96f14d2c9c60185.webp?acc=pnZ6-XalEvqLfM8oWPja0g&exp=1762197330" },
+        { num: 3, page: "https://es4.movietop.cc/es_manga/pic5/22/28502/756135/c4dc035d67bc669546c560622ac4bdd4.webp?acc=47-PBJI5ieOrC7anG3SMWg&exp=1762197330" },
+        { num: 4, page: "https://es12.movietop.cc/es_manga/pic5/22/28502/756135/491442df5f88c6aa018e86dac21d3606.webp?acc=ifQ39Le8yiixjsSQoCjEbQ&exp=1762197330" }
       ]
     };
 
