--- a/capitulos/Isekai-samurai/capitulo-1.html
+++ b/capitulos/Isekai-samurai/capitulo-1.html
@@ -37,7 +37,7 @@
       display: flex;
       justify-content: center;
       gap: 20px;
-      margin-bottom: 40px;
+      margin: 40px 0;
     }
 
     .nav-buttons a {
@@ -87,6 +87,13 @@
     <!-- Título dinámico y visor -->
     <h2 id="titulo-capitulo" style="color: #d8175f; margin-bottom: 20px;"></h2>
     <div id="visor"></div>
+
+    <!-- Botones de navegación al final -->
+    <div class="nav-buttons">
+      <a href="../../mangas/mieruko-chan/Tomo-1.html">← Salir</a>
+      <a href="capitulo-2.html">⟵ Capítulo anterior</a>
+      <a href="capitulo-2.html">Capítulo siguiente ⟶</a>
+    </div>
   </div>
 
   <script>
