--- a/mangas/mieruko-chan/Tomo-1.html
+++ b/mangas/mieruko-chan/Tomo-1.html
@@ -203,7 +203,7 @@
           <li><strong>Estado:</strong> <span>En Emision</span></li>
         </ul>
         <div class="action-buttons">
-          <a href="https://mega.io/es/" target="_blank" class="descargar">Descargar Tomo 1</a>
+          <a href="https://drive.google.com/drive/folders/1WNRnyzFfPdujInipx4kjBj0kyRpXQod9?usp=sharing" target="_blank" class="descargar">Descargar Tomo 1</a>
           <a href="https://www.youtube.com/watch?v=ZnAjSrPnGZQ" target="_blank" class="trailer">PV animado del manga</a>
         </div>
       </div>
