--- a/mangas/mieruko-chan/Tomo-1.html
+++ b/mangas/mieruko-chan/Tomo-1.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Mieruko-chan - Mini AnimeFLV</title>
+  <title>Mieruko-chan - EnderVerse</title>
   <link rel="stylesheet" href="../../style.css" />
   <style>
     body {
@@ -174,7 +174,7 @@
 </head>
 <body>
   <header>
-    <h1 style="color: #d8175f;">Mini AnimeFLV</h1>
+    <h1 style="color: #d8175f;">EnderVerse</h1>
     <a href="../../catalogo.html"><button>⬅ Volver al catálogo</button></a>
   </header>
 
