--- a/mangas/Isekai-samurai/Tomo-1.html
+++ b/mangas/Isekai-samurai/Tomo-1.html
@@ -175,7 +175,7 @@
 </head>
 <body>
   <header>
-    <h1 style="color: #d8175f;">Mini AnimeFLV</h1>
+    <h1 style="color: #d8175f; font-size: 3.2em;"">Mini AnimeFLV</h1>
     <a href="../../catalogo.html"><button>⬅ Volver al catálogo</button></a>
   </header>
 
