--- a/mangas/Isekai-samurai/Tomo-1.html
+++ b/mangas/Isekai-samurai/Tomo-1.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Mieruko-chan - Mini AnimeFLV</title>
+  <title>Isekai-samurai - EnderVerse</title>
   <link rel="stylesheet" href="../../style.css" />
   <style>
     body {
