--- a/mangas/I-Think-I-Turned/Tomo-1.html
+++ b/mangas/I-Think-I-Turned/Tomo-1.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Mieruko-chan - EnderVerse</title>
+  <title>I Turned My Childhood Friend Into A Girl - EnderVerse</title>
   <link rel="stylesheet" href="../../style.css" />
   <style>
     body {
@@ -191,7 +191,7 @@
         </div>
       </div>
       <div class="anime-details">
-        <h2 id="anime-title">Mieruko-chan</h2>
+        <h2 id="anime-title">I Turned My Childhood Friend (♂) Into A Girl</h2>
         <p id="anime-sinopsis">Miko es una típica estudiante de preparatoria cuya vida da un vuelco cuando de repente comienza a ver monstruos espantosos y horribles. A pesar de estar completamente aterrorizada, Miko sigue con su vida diaria, fingiendo no darse cuenta de los horrores que la rodean. Debe soportar el miedo para mantenerse a ella y a su amiga Hana fuera de peligro, incluso si eso significa enfrentarse cara a cara con lo peor. Mezclando comedia y horror, Mieruko-chan cuenta la historia de una chica que trata de lidiar con lo paranormal actuando indiferente hacia él.</p>
         <ul>
           <li><strong>Cantidad de Tomos:</strong> <span>13</span></li>
