--- a/mangas/I-Think-I-Turned/Tomo-1.html
+++ b/mangas/I-Think-I-Turned/Tomo-1.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>I Turned My Childhood Friend Into A Girl - EnderVerse</title>
+  <title>I Turned.. Into A Girl - EnderVerse</title>
   <link rel="stylesheet" href="../../style.css" />
   <style>
     body {
