--- a/capitulos/I-Think-I-Turned/capitulo-2.html
+++ b/capitulos/I-Think-I-Turned/capitulo-2.html
@@ -80,6 +80,7 @@
     <!-- Botones de navegación -->
     <div class="nav-buttons">
       <a href="../../mangas/I-Think-I-Turned/Tomo-1.html">← Salir</a>
+      <a href="capitulo-1.html">⟵ Capítulo anterior</a>
       <a href="capitulo-3.html">Capítulo siguiente ⟶</a>
     </div>
 
@@ -90,6 +91,7 @@
     <!-- Botones de navegación al final -->
     <div class="nav-buttons">
       <a href="../../mangas/I-Think-I-Turned/Tomo-1.html">← Salir</a>
+      <a href="capitulo-1.html">⟵ Capítulo anterior</a>
       <a href="capitulo-3.html">Capítulo siguiente ⟶</a>
     </div>
   </div>
