--- a/capitulos/I-Think-I-Turned/capitulo-3.html
+++ b/capitulos/I-Think-I-Turned/capitulo-3.html
@@ -81,6 +81,7 @@
     <div class="nav-buttons">
       <a href="../../mangas/I-Think-I-Turned/Tomo-1.html">← Salir</a>
       <a href="capitulo-2.html">⟵ Capítulo anterior</a>
+      <a href="capitulo-4.html">Capítulo siguiente ⟶</a>      
     </div>
 
     <!-- Título dinámico y visor -->
@@ -91,6 +92,7 @@
     <div class="nav-buttons">
       <a href="../../mangas/I-Think-I-Turned/Tomo-1.html">← Salir</a>
       <a href="capitulo-2.html">⟵ Capítulo anterior</a>
+      <a href="capitulo-4.html">Capítulo siguiente ⟶</a>      
     </div>
   </div>
 
