--- a/capitulos/I-Think-I-Turned/capitulo-3.html
+++ b/capitulos/I-Think-I-Turned/capitulo-3.html
@@ -60,7 +60,7 @@
 </head>
 <body>
   <header>
-    <h1 class="logo-text-header">Mini AnimeFLV</h1>
+    <h1 class="logo-text-header">EnderVerse</h1>
     <a href="../../mangas/I-Think-I-Turned/Tomo-1.html"><button>⬅ Volver al Tomo</button></a>
   </header>
 
